# medbill

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/rules/: architecture.md  domain-medical-billing.md  medbillgen.md  models-pydantic.md  privacy.md  testing.md  web-app.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  FINE_TUNING.md  PRD.md  PRIVACY.md
medbillbench/: __init__.py  cli.py  evaluator.py  metrics.py
medbillbench/runners/: base.py  ollama.py  openai_gpt4v.py
medbillgen/: __init__.py  cli.py  encounter.py  errors.py  generator.py  renderer.py
medbillgen/templates/: hospital_bill.html
results/: leaderboard_n50.json  prompt_ablation.json  real_document_comparison.json
scripts/: build_cms_data.py
src/medbill/: __init__.py  cli.py  models.py
src/medbill/analysis/: rules.py
src/medbill/core/: ocr.py  prompts.py
src/medbill/data/: __init__.py
src/medbill/web/: app.py
src/medbill/web/templates/: base.html  error.html  index.html  results.html
tests/: test_cli.py  test_e2e.py  test_medbillgen.py  test_metrics.py  test_models.py  test_prompts.py  test_rules.py  test_web.py
