[project]
name = "medbill"
version = "0.1.0"
description = "Open-source, privacy-first medical bill scanner. Finds errors, explains charges, generates appeals."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Marco Cornejo" },
]
keywords = ["medical-billing", "ocr", "document-ai", "healthcare"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "pydantic>=2.10",
    "httpx>=0.28",
    "pymupdf>=1.27.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "pip-audit>=2.7",
]

[project.scripts]
medbill = "medbill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medbill", "medbillgen", "medbillbench"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services",
]

[tool.coverage.run]
source = ["src/medbill"]

[tool.coverage.report]
fail_under = 80
show_missing = true
